Add new test methods on backend project to test some scenarios like add repeated schedules